project/phase2/test/test_2_r15.out
Error type 15 at Line 7: redefine the same structure type

