project/phase2/test/test_2_r15.spl
struct Apple
{
  int weight;
  float round;
  float price;
};
struct Apple
{
  int round;
  float weight;
  float price;
};
int test_2_r15()
{
  struct Apple aa;
  aa.price = 2;
  return 0;
}